# EU-Global-scale-tool

./: LICENSE  LICENSE.md  README.md
backend/: docker-compose.yml
backend/nevermore_api/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/nevermore_api/api/: constants.py  database.py  dependencies.py  main.py
backend/nevermore_api/api/models/: models.py  policy_item.py
backend/nevermore_api/api/models/schemas/: chat.py  scenario.py  token_data.py
backend/nevermore_api/api/routers/: chat.py  scenario.py  websocket.py
backend/nevermore_api/api/services/: chat.py  scenario.py
backend/nevermore_api/tests/: conftest.py  constants.py  test_api.py  test_chat.py  test_scenario.py
frontend/: Dockerfile  README.md  angular.json  docker-compose.yml  package-lock.json  package.json
frontend/public/: baseline.ts
frontend/src/: index.html  styles.scss
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts
frontend/src/app/components/alert/: alert.component.html  alert.component.scss  alert.component.ts
frontend/src/app/components/scenarios-management/: scenarios-management.component.html  scenarios-management.component.scss  (+1 more)
frontend/src/app/interceptors/: token-interceptor.service.ts
frontend/src/app/models/: alert.ts  message-data.ts  scenario.ts
frontend/src/app/services/: alert.service.ts  chat.service.ts  global.service.ts  model-chart.service.ts  policies.service.ts  user.service.ts
frontend/src/environments/: environment.development.ts  environment.ts
(+25 files in other folders)
