[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Manuel Pérez del Olom <manper@cartif.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
gunicorn = "^23.0.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.37"
psycopg2-binary = "^2.9.10"
broadcaster = {extras = ["redis"], version = "^0.3.1"}
python-keycloak = "^5.3.1"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"